# cognitive-computing-projects

./: .gitignore  README.md  main.py  pyproject.toml
auto_diagnostic/: config.py  lemmatization.py  preprocess.py  pyproject.toml  tfidf.py
auto_diagnostic/data/processed/: processed_data1.csv
auto_diagnostic/dataloader/: makedata.py
auto_diagnostic/graphs/: word_graph.py
auto_diagnostic/notebooks/: CreateCSV.ipynb  lemmatization_test.ipynb  tdidf_test.py.ipynb  tdidf_test.py2.ipynb  tdidf_test.py2_final.ipynb  word_graph.ipynb
computer_vision/: README.md  pyproject.toml
computer_vision/notebooks/: IoU_Image_Segmentation.ipynb  Visao_Computacional_Atlantico.ipynb  atlantico.ipynb  seg_otsu.ipynb  segmantantion.ipynb  tecnica_sobel.ipynb
computer_vision/release/: ap1.py
computer_vision/src/: image_proc.py
create-csv/: create_csv.py
dataloader/: makedata.py
graphs/: word_graph.py
notebooks/: CreateCSV.ipynb  generate_graph.ipynb  lemmatization_test.ipynb  lemmatization_test_final.ipynb  preprocessamento.ipynb  tdidf_test.py.ipynb  tdidf_test.py2.ipynb  tdidf_test.py2_final.ipynb  test_makedata.ipynb  word_graph.ipynb
tests/: test_auto_diagnostic.py
tfidf/: tfidf.py
