[tool.poetry]
name = "auto-diagnostic"
version = "0.1.0"
description = ""
authors = ["André Rodrigues <andrelmarques11@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.9,<3.11"
jupyter = "^1.0.0"
spacy = "^3.3.0"
stanza = "^1.4.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
