[tool.poetry]
name = "auto-diagnostic"
version = "0.1.0"
description = ""
authors = ["André Rodrigues <andrelmarques11@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
jupyter = "^1.0.0"
spacy = "^3.3.0"
stanza = "^1.4.0"
nltk = "^3.7"
PyPDF2 = "^1.27.12"
pandas = "^1.4.2"
PyMuPDF = "^1.19.6"
Unidecode = "^1.3.4"
networkx = "^2.8.1"
matplotlib = "^3.5.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[tool.poetry.scripts]
auto-diagnostic = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
