[tool.poetry]
name = "computer_vision"
version = "0.1.0"
description = "Computer Vision Project"
authors = ["André Rodrigues <andrelmarques11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
